make gitignore calm down
